# multilouvain

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindIGraph.cmake  FindMATLAB.cmake  FindMyMatlab.cmake  FindOCTAVE.cmake
src/: CMakeLists.txt  CPMVertexPartition.cpp  CPMVertexPartition.h  Common.h  DCSurpriseVertexPartition.cpp  DCSurpriseVertexPartition.h  GraphHelper.cpp  GraphHelper.h  KLModularityVertexPartition.cpp  KLModularityVertexPartition.h  LinearResolutionParameterVertexPartition.cpp  LinearResolutionParameterVertexPartition.h  ModularityVertexPartition.cpp  ModularityVertexPartition.h  MutableVertexPartition.cpp  MutableVertexPartition.h  Optimiser.cpp  Optimiser.h  RBConfigurationVertexPartition.cpp  RBConfigurationVertexPartition.h  RBERVertexPartition.cpp  RBERVertexPartition.h  SignificanceVertexPartition.cpp  SignificanceVertexPartition.h  SurpriseVertexPartition.cpp  SurpriseVertexPartition.h  igraph_utils.cpp  igraph_utils.h  mexInterrupt.h  multilouvain.cpp  pynterface.h  run_multilouvain.cpp  test_graph.cpp  test_igraph_matrix.cpp  test_multilouvain.cpp  test_multilouvain2.cpp
src/iglfind/: igl_find.cpp  igl_find.h
